src/styles/base.scss
@import "colors";
@import "constants";

body {
  &::-webkit-scrollbar {
    width: 1rem;
    height: 1rem;
  }

  &::-webkit-scrollbar-thumb {
    background-color: hsla(0, 0%, 100%, 0.32941176470588235); // todo: change to variables
    // border-radius: 5px;
    outline: none;
    border: none;
  }

  &::-webkit-scrollbar-track-piece {
    background-color: rgba(0, 0, 0, 0.137);
  }
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  // font-family: 'Open Sans', sans-serif;
  font-family: "Poppins", sans-serif;
  transition:
    transform $transition-duration,
    background-color $transition-duration,
    box-shadow $transition-duration;

  ::-webkit-scrollbar {
    width: 0.5rem;
    height: 0.5rem;
  }
}

a {
  text-decoration: none;
  font-size: 20px;
  padding: 0 5px 0 5px;
}

ul {
  list-style-type: none;
}

.hidden-input {
  display: none;
}

.app-page {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-flow: column;
  background-color: $primary-color;
  color: $primary-text-color;
}

.document-page {
  padding: 2rem 20vw;
  justify-content: space-evenly;

  article {
    max-width: 900px;
    color: $primary-text-color;

    .last-change {
      font-weight: 500;
    }

    h1 {
      text-align: center;
      font-size: 2rem;
      margin-bottom: 28px;
      font-weight: 700;
      line-height: 1.25;
      color: $accent-color;
    }

    h2 {
      font-size: 1.625rem;
      margin: 2.2rem 0 2rem 0;
      color: $accent-color;
    }

    span.strong {
      font-weight: 600;
    }

    span.small {
      font-size: 85%;
    }

    span.new-line {
      display: block;
    }

    span.bottom-spacing {
      margin-bottom: 2rem;
    }

    p {
      margin: 0 0 1rem;
      font-size: 1rem;
    }

    a {
      color: $accent-color;
      text-decoration: underline;
      font-size: 1rem;
    }

    ul > li {
      list-style-type: disc;
    }

    ul,
    li ul {
      padding-left: 3rem;
    }

    li ul > li {
      list-style-type: circle;
    }

    li ul li ul > li {
      list-style-type: square;
    }

    li:last-of-type {
      margin-bottom: 1rem;
    }
  }
}

.form-page {
  justify-content: center !important;
  gap: 1rem;

  .form-wrapper {
    text-align: center;
    background-color: $background-accent-color-low;
    border-radius: 0.375rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 2.188rem 2.125rem;
    box-shadow: 0 0 8px -2px $box-shadow-color;
    max-width: 485px;

    * {
      font-family: "Inter", sans-serif;
      overflow-wrap: break-word;
    }

    a {
      color: $accent-color;
      font-size: 0.875rem;

      &:hover {
        text-decoration: underline;
      }
    }

    .icon-header {
      display: flex;
      align-items: center;
      gap: 1rem;

      i {
        font-size: 1.5rem;
        margin-bottom: 0.313rem;
      }
    }

    h1,
    h3 {
      text-align: left;
    }

    h1 {
      font-size: 1.5rem;
      color: $primary-text-color;
      margin-bottom: 0.5rem;
      font-weight: 600;
    }

    h3 {
      font-size: 0.875rem;
      margin-bottom: 1.5rem;
      font-weight: 400;
    }

    .state-message {
      margin-top: 70px;
      margin-bottom: 5px;
      background-color: $secondary-color;
      padding: 20px;
      border-radius: 15px;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      color: $accent-color;
      background-color: $secondary-color;
    }

    form {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;

      .inputs {
        display: flex;
        flex-direction: column;
        gap: 1rem;

        .names {
          display: flex;
          width: 408px;
          align-items: center;
          justify-content: space-between;

          .input-wrapper {
            width: 45%;
          }
        }
      }

      .under-inputs-section {
        margin-top: 30px;
        margin-left: 0.5rem;
        width: 100%;
        display: flex;
        justify-content: space-between;

        label {
          text-align: left;

          a {
            padding: 0;
            font-size: inherit;
          }
        }
      }

      .btn {
        margin-top: 1.5rem;
      }

      .loader {
        margin: 30px 0;
      }
    }

    .under-form-section {
      margin: 1.5rem auto 0;
      font-size: 0.875rem;
      display: flex;
      align-items: center;

      .return-link {
        display: flex;
        align-items: center;
        gap: 0.5rem;

        &:hover {
          text-decoration: none;

          span {
            text-decoration: underline;
          }
        }
      }
    }
  }
}

#dashboard-page,
#settings-page {
  display: grid;
  grid-template-columns: 1fr 4fr;
  align-items: stretch;
  background-color: $secondary-color;

  @media only screen and (max-width: $xs) {
    display: flex;
    flex-direction: column;
  }
}

.dashboard-page,
.settings-page {
  margin-block: 1rem;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  gap: 1rem;
  background-color: $primary-color;
  border-radius: 2.5rem 0 0 2.5rem;

  @media only screen and (max-width: $xs) {
    width: 100vw;
    border-radius: 0;
    padding: 0;
    margin: 0;
  }

  h2 {
    color: $primary-text-color;
  }
}

.dashboard-data-page {
  display: grid;
  grid-template-rows: repeat(3, auto);
  justify-items: center;
  padding: 0.5rem 1px;
  align-content: center;
  gap: 2rem;
}

.dashboard-data-table-wrapper {
  width: 100%;
  max-width: 100vw;
  display: flex;
  justify-content: center;
  overflow: auto;
  white-space: nowrap;

  table {
    border-spacing: 0;
    box-shadow: 0 0 8px -2px $box-shadow-color;
    @media only screen and (max-width: $sm) {
      display: block;
    }
    thead {
      position: sticky;
      top: 0;
      @media only screen and (max-width: $sm) {
        display: block;
        margin-bottom: 15px;
      }
    }

    i {
      margin-right: 0.4rem;
      font-size: 1.5rem;
    }
  }

  th {
    padding: 0 1rem;
    text-transform: uppercase;
    background-color: $background-accent-high;
    user-select: none;
    height: 3.375rem;
    font-size: 0.75rem;
    color: $secondary-text-color;
    border-width: thin 0 thin 0;
    border-style: solid;
    border-color: $secondary-color;
    letter-spacing: 1px;
    text-align: left;
    @media only screen and (max-width: $sm) {
      display: flex;
      align-items: center;
    }

    i {
      font-size: 1rem;
    }
  }
  tr {
    @media only screen and (max-width: $sm) {
      display: block;
      border: thin solid $primary-text-color;
    }
  }
  tbody {
    @media only screen and (max-width: $sm) {
      display: flex;
      flex-direction: column;
      gap: 10px;
    }
  }

  th:first-child {
    border-radius: 0.5rem 0 0 0;
  }

  th:last-child {
    border-radius: 0 0.5rem 0 0;
  }

  tr:last-child td:first-child {
    border-radius: 0 0 0 0.5rem;
  }

  tr:last-child td:last-child {
    border-radius: 0 0 0.5rem 0;
  }

  tr:hover > td {
    background-color: $background-accent-medium;
  }

  td {
    padding: 1rem;
    font-size: 0.875rem;
    height: 3.125rem;
    background-color: $background-accent-low;
    transition: none;
    border-bottom: thin solid $secondary-color;
    @media only screen and (max-width: $sm) {
      display: flex;
      gap: 5px;
      align-items: center;
      justify-content: flex-start;
    }

    a {
      font-weight: 500;
      color: $secondary-text-color;
      font-size: inherit;
      padding: 0;

      &:hover {
        text-decoration: underline;
      }
    }

    &.user {
      a {
        display: block;
      }

      span {
        font-size: 80%;
      }
    }

    .data-icon-wrapper {
      display: flex;
      align-items: center;
    }
  }
}

.error-page {
  height: 92%;
  justify-content: space-evenly;
  color: $secondary-text-color;

  svg {
    height: 40vh;
  }

  h3 {
    font-size: 6rem;
    font-family: "Poppins", sans-serif;
  }
}

.elevated-card {
  display: grid;
  grid-template-rows: auto;
  background-color: $background-accent-low;
  box-shadow: 0 0 8px -2px $box-shadow-color;
  border-radius: 0.375rem;
  padding: 2.188rem 2.125rem;
  gap: 1rem;

  @media only screen and (max-width: $xs) {
    display: flex;
    flex-direction: column;
  }
}

